# tecken

./: .coveragerc  .dockerignore  .editorconfig  .env-dist  .flake8  .gitignore  .log4brains.yml  .pyup.yml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  Dockerfile.dev  Dockerfile.frontend  Dockerfile.staticfrontend  Makefile  Procfile  README.md  README.rst  circle.yml  circus_eliot.ini  code_of_conduct.md  contribute.json  dev-requirements.txt  docker-compose.override.yml  docker-compose.yml  docs-requirements.txt  hack.py-dist  justfile  manage.py  package.json  pyproject.toml  pytest.ini  readthedocs.yml  renovate.json  requirements-constraints.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build-and-push.yml
docker/: Dockerfile  build_dump_syms.sh
docker/config/: env-dist  local_dev.env  slick.sh-dist  test.env
docs/: Makefile  adr_log.rst  authentication.rst  benchmarking.rst  celery.rst  conf.py  configuration.rst  deploy.rst  deployment.rst  dev.rst  docker.rst  download.rst  endtoendtesting.rst  frontend.rst  glossary.rst  index.rst  metrics.rst  overview.rst  redis.rst  symbolication.rst  systemtests.rst  upload.rst
docs/adr/: 20210819-use-log4brains-to-manage-the-adrs.md  20210819-use-markdown-architectural-decision-records.md  20210820-symbolication-microservice.md  index.md
docs/diagrams/: arch.gv
docs/exts/: document_metrics.py  eliot_metrics.py
eliot-service/: Procfile  pytest.ini
eliot-service/eliot/: app.py  cache.py  cache_manager.py  downloader.py  health_resource.py  index_resource.py  libdockerflow.py  liblogging.py  libmarkus.py  librequests.py  libsentry.py  libsymbolic.py  logginglib.py  markuslib.py  sentrylib.py  symbolicate_resource.py  wsgi.py
eliot-service/tests/: conftest.py  test_app.py  test_cache.py  test_cache_manager.py  test_downloader.py  test_healthresource.py  test_libdockerflow.py  test_libsymbolic.py  test_sentry.py  test_symbolicate_resource.py  utils.py
frontend/: Dockerfile  README.md  package.json
frontend/public/: index.html  manifest.json
frontend/src/: APIRequests.js  App.css  App.js  App.test.js  Common.js  Downloads.js  DownloadsMicrosoft.js  DownloadsMissing.js  Fetch.js  FetchError.js  File.js  Files.css  Files.js  Help.js  Home.css  Home.js  Nav.css  Nav.js  Store.js  Symbolication.js  Tokens.css  Tokens.js  Upload.css  Upload.js  UploadNow.js  Uploads.css  Uploads.js  User.js  Users.js  index.js  registerServiceWorker.js
loadtest/: Makefile  README.rst  loadtest.py  requirements.txt
metricsapp/: README.md  package.json
metricsapp/public/: index.html
metricsapp/src/: App.css  App.js  App.test.js  index.js
requirements/: constraints.txt  default.txt  docs.txt
schemas/: symbolicate_api_response_v4.json  symbolicate_api_response_v5.json
smoketests/: README.rst  setup_tests.py  test_env.py
smoketests/smoketestslib/: utils.py
systemtests/: .gitignore  README.rst  pytest.ini  setup_tests.py  setup_tests.sh  test_env.py  test_env.sh  utils.py
systemtests/data/: sym_files_to_download.csv
systemtests/lib/: fake_data.py  tecken_client.py
systemtests/systemtestslib/: utils.py
systemtests/tests/: conftest.py  test_direct_upload.py  test_upload_by_download.py
tecken/: __init__.py  apps.py  boto_extra.py  cache_extra.py  celery.py  dockerflow_extra.py  gunicornhooks.py  libboto.py  libcache.py  libdockerflow.py  libmarkus.py  librequests.py  libsentry.py  libstorage.py  libsym.py  libtiming.py  markus_extra.py  models.py  pytest.ini  s3.py  settings.py  statsd_metrics.yaml  storage.py  tasks.py  tecken_metrics.yaml  urls.py  views.py  wsgi.py
tecken/api/: forms.py  urls.py  views.py
tecken/base/: admin.py  admin_site.py  admin_urls.py  apps.py  (+5 more)
test-with-nginx/: generate.py  selfsigned.crt  selfsigned.key  tecken-https.conf.template
tests/: blockade.py  broken_dump_syms.sh  conftest.py  ksproxy.pd_  sample.tgz  test_api.py  test_boto_extra.py  test_clusters.py  test_dashboard.py  test_database.py  test_decorators.py  test_dockerflow_extra.py  test_download.py  test_jobs.py  test_keys.py  test_provisioners.py  test_s3.py  test_storage.py  test_symboldownloader.py  test_symbolicate.py  test_tokens.py  test_upload.py  test_useradmin.py  test_views.py
(+160 files in other folders)
