[project]
name = "tecken"
description = "The Mozilla Symbol Server"
readme = "README.rst"
authors = [{name = "Mozilla", email = "peterbe@mozilla.com"}]
version = "1.0.0"  # Required, but unused
requires-python = "==3.11.*"
dependencies = [
    "boto3==1.34.162",
    "botocore==1.34.162",
    "click==8.3.1",
    "dj-database-url==3.1.0",
    "django==4.2.28",
    "django-admin-cursor-paginator==0.1.7",
    "django-redis==6.0.0",
    "dockerflow==2026.1.26",
    "encore==0.8.0",
    "everett==3.5.0",
    "fillmore==2.2.0",
    "google-cloud-storage==3.8.0",
    "gunicorn==24.1.1",
    "honcho==2.0.0",
    "markus[datadog]==5.2.0",
    "mozilla-django-oidc==5.0.2",
    "msgpack==1.1.2",
    "obs-common==2026.1.21",
    "psycopg2==2.9.11",
    "pytest==9.0.2",
    "pytest-django==4.11.1",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "redis==5.0.8",
    "requests==2.32.5",
    "requests-mock==1.12.1",
    "ruff==0.14.14",
    "sentry-sdk==2.51.0",
    "sphinx==9.0.4",
    "sphinx-rtd-theme==3.1.0",
    "sphinxcontrib-httpdomain==1.8.1",
    "werkzeug==3.1.5",
    "whitenoise==6.11.0",
]

[dependency-groups]
devcontainer = [
    "ipython",
]

[project.urls]
Homepage = "https://github.com/mozilla-services/tecken"

[tool.uv]
environments = ["""
    sys_platform == 'linux' and
    platform_machine == 'x86_64' and
    implementation_name == 'cpython'
"""]
package = false

[[tool.uv.index]]
name = "cavendish"
url = "https://us-python.pkg.dev/moz-fx-cavendish-prod/cavendish-prod-python/simple/"

[tool.uv.sources]
obs-common = { index = "cavendish" }

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
# Enable pycodestyle (E), pyflakes (F), and bugbear (B) rules
select = ["E", "F", "B"]
ignore = ["E501"]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"


[tool.paul-mclendahand]
github_user = "mozilla-services"
github_project = "tecken"
main_branch = "main"


[tool.release]
github_user = "mozilla-services"
github_project = "tecken"
bugzilla_product = "Tecken"
bugzilla_component = "General"
main_branch = "main"
tag_name_template = "v%Y.%m.%d"


[tool.service-status]
main_branch = "main"
hosts = [
    "stage=https://tecken-stage.symbols.nonprod.webservices.mozgcp.net/",
    "prod=https://symbols.mozilla.org"
]
